# mGraphDB

./: .gitignore  .gitmessage.txt  Cargo.toml  LICENSE  README.md
.githooks/: commit-msg
benches/: graph.rs  string_store.rs
benches/data/: README.md
docs/: test.md
src/: graph.rs  index_store.rs  lib.rs  main.rs  node_store.rs  prop_store.rs  string_store.rs
